# pdf-png-converter

./: .gitignore  CLAUDE.md  README.md  config.toml  config.toml.example  main.py  pyproject.toml
specs/001-fix-faint-lines/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-faint-lines/checklists/: requirements.md
specs/001-fix-faint-lines/contracts/: cli-contract.md
specs/001-pdf-png-converter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdf-png-converter/checklists/: requirements.md
specs/001-pdf-png-converter/contracts/: cli.md  config-schema.md
src/pdf_png_converter/cli/: main.py
src/pdf_png_converter/config/: config_loader.py  conversion_config.py
src/pdf_png_converter/models/: __init__.py  conversion_job.py  conversion_result.py  conversion_status.py  rendering_options.py
src/pdf_png_converter/reporting/: conversion_reporter.py
src/pdf_png_converter/services/: conversion_orchestrator.py  directory_builder.py  path_resolver.py  pdf_renderer.py  pdf_scanner.py
tests/: conftest.py
tests/e2e/: test_full_conversion.py
tests/fixtures/: create_fixtures.py
tests/integration/: test_config_integration.py  test_line_visibility.py  test_pipeline_integration.py  test_scan_and_resolve.py
tests/unit/cli/: test_main.py
tests/unit/config/: test_config_loader.py  test_conversion_config.py
tests/unit/models/: test_conversion_job.py  test_conversion_result.py  test_conversion_status.py  test_rendering_options.py
tests/unit/reporting/: test_conversion_reporter.py
(+5 files in other folders)
